--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </button> -->
 
           <button class="animated-btn">
-            <a href="#contactinput">
+            <a href="#formContainer">
               <p class="btn-text eighteen-medium">Join Waitlist</p>
             </a>
           </button>
@@ -371,6 +371,25 @@
         <h2 class="thirty-four-regular reveal-text">Service Categories</h2>
       </div>
     </section>
+
+
+<section class="whatsapp-community-section">
+    <div class="container">
+        <div class="community-card">
+            <div class="whatsapp-icon">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="80" height="80">
+            </div>
+            <h2 class="community-title">Join Our WhatsApp Community</h2>
+            <p class="community-description">
+                Connect with like-minded individuals, stay updated with the latest news, and be part of our growing community. Get instant notifications and engage in meaningful conversations.
+            </p>
+            <a href="https://chat.whatsapp.com/INe1JdYjai5EJ8UkH7CLIW" class="join-button" target="_blank" rel="noopener noreferrer">
+                Join Community
+            </a>
+        </div>
+    </div>
+</section>
+
 
 
     <section class="section-three">
@@ -1372,7 +1391,7 @@
           </div>
 
           <button class="button button-text primary-color">
-            <a href="#contactinput">
+            <a href="#formContainer">
               <p class="btn-text eighteen-medium">Join Waitlist</p>
             </a>
           </button>
