--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@
           <p class="">
             No app download needed. Start right from your browser.
           </p>
-          <p class="twenty-four-medium">
+          <!-- <p class="twenty-four-medium">
             Post your job. Get bids. Choose the right person
-          </p>
+          </p> -->
         </div>
       </div>
     </section>
@@ -937,7 +937,7 @@
     <!-- Right Side - Image with Card -->
     <div class="image-side">
       <div class="worker-image-container">
-        <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?w=800&h=900&fit=crop" alt="Worker cleaning home">
+        <img src="./images/Section-four/employer-image.png" alt="Worker cleaning home">
         
         <!-- Overlay Card -->
         <div class="worker-card">
@@ -1571,92 +1571,117 @@
 
 
     <!-- ✅ FAQ Section -->
-    <section class="faq-section" aria-labelledby="faq-heading">
-      <div class="container">
-        <h2 id="faq-heading" class="faq-heading">Frequently Asked Questions</h2>
+<section class="faq-section" aria-labelledby="faq-heading">
+  <div class="container">
+    <h2 id="faq-heading" class="faq-heading">Frequently Asked Questions</h2>
 
+    <div class="accordion">
 
-        <div class="accordion">
-          <details open>
-            <summary>
-              1. What kind of services can I book through your platform? What if my desired job is not mentioned in
-              the given categories?
-            </summary>
-            <div class="answer">
-              <p>
-                You can book a wide range of services including home cleaning, plumbing, electrical work, appliance
-                repair, carpentry, cooking, childcare, elderly care, pet care, and more. If your specific job isn’t
-                listed, you can submit a “custom request” our team will connect you with the most suitable job taker
-                for the job!
-              </p>
-            </div>
-          </details>
-
-          <details>
-            <summary>2. How do I know the job takers are trustworthy?</summary>
-            <div class="answer">
-              <p>All job takers undergo identity verification, background checks, and review-based ranking.</p>
-            </div>
-          </details>
-
-          <details>
-            <summary>3. What if I don’t speak the same language as the job taker?</summary>
-            <div class="answer">
-              <p>We offer in-app translation and real time AI language support to help communication.</p>
-            </div>
-          </details>
-
-          <details>
-            <summary>4. Can I schedule jobs in advance?</summary>
-            <div class="answer">
-              <p>Yes choose a date and time when you post your job or contact support for special arrangements.</p>
-            </div>
-          </details>
-
-          <details>
-            <summary>5. Is frogr more expensive than hiring directly?</summary>
-            <div class="answer">
-              <p>We strive for fair pricing. Our platform adds verification, escrow, and support — you can compare
-                matched rates before booking.</p>
-            </div>
-          </details>
-
-          <details>
-            <summary>6. How do payments work?</summary>
-            <div class="answer">
-              <p>Payments are held in escrow and released to the job taker only after you confirm completion.</p>
-            </div>
-          </details>
-
-          <details>
-            <summary>7. Steps to request a refund?</summary>
-            <div class="answer">
-              <p>To request a refund, please state the reason for cancellation and, if any issue occurred, submit a
-                complaint for review.</p>
-            </div>
-          </details>
-
-          <button class="faq-toggle-btn button-text primary-color" id="toggleAllFaqs">
-
-            <p class="btn-text eighteen-medium">Open All</p>
-
-          </button>
-
-          <div>
-            <p class="sixteen-medium" style="text-align: center;">Still have questions? Join now and chat with our onboarding team</p>
-          </div>
-
-          <button class="button button-text primary-color">
-            <a href="#formContainer">
-              <p class="btn-text eighteen-medium">Join Waitlist</p>
-            </a>
-          </button>
-
-          <!-- ✨ Expand/Collapse All Button -->
-          <!-- <button class="faq-toggle-btn" id="toggleAllFaqs">Expand All</button> -->
+      <details open>
+        <summary>
+          1. What kind of jobs can be posted on Frogr?
+        </summary>
+        <div class="answer">
+          <p>
+            Frogr supports short-term and flexible local tasks such as delivery help, shop assistance, event support,
+            office helpers, moving help, errands, home assistance, and more. If your task doesn’t fit a listed category,
+            you can still post it as a custom job and receive applications from nearby workers.
+          </p>
         </div>
+      </details>
+
+      <details>
+        <summary>
+          2. How does Frogr work for job posters?
+        </summary>
+        <div class="answer">
+          <p>
+            Simply post your task with details like location, time, and budget. Nearby workers can apply, you review
+            their profiles, choose the right person, and get the job done — all in a few simple steps.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>
+          3. How does Frogr work for workers?
+        </summary>
+        <div class="answer">
+          <p>
+            Workers can browse nearby gigs, apply instantly, chat with job posters, complete the task,
+            and build ratings to grow their profile and income opportunities.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>
+          4. Is there any long-term contract or subscription?
+        </summary>
+        <div class="answer">
+          <p>
+            No. Frogr is designed for flexible, on-demand work. You can post or accept one-time jobs
+            without any long-term commitments or complicated hiring processes.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>
+          5. How are payments handled?
+        </summary>
+        <div class="answer">
+          <p>
+            Payment terms are clearly agreed upon before the job begins. Frogr ensures transparency so
+            both job posters and workers know exactly what to expect before confirming the task.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>
+          6. How do you ensure trust and safety?
+        </summary>
+        <div class="answer">
+          <p>
+            Frogr promotes verified profiles, local matching, clear job details, and a rating system
+            so both sides can build trust within the community over time.
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>
+          7. Where is Frogr currently available?
+        </summary>
+        <div class="answer">
+          <p>
+            Frogr is launching in Bangalore first, starting neighbourhood by neighbourhood,
+            and will expand to more cities soon.
+          </p>
+        </div>
+      </details>
+
+      <button class="faq-toggle-btn button-text primary-color" id="toggleAllFaqs">
+        <p class="btn-text eighteen-medium">Open All</p>
+      </button>
+
+      <div>
+        <p class="sixteen-medium" style="text-align: center;">
+          Still have questions? Join our waitlist and connect with the Frogr team.
+        </p>
       </div>
-    </section>
+
+      <button class="button button-text primary-color">
+        <a href="#formContainer">
+          <p class="btn-text eighteen-medium">Join Waitlist</p>
+        </a>
+      </button>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- ✅ JS: Expand/Collapse All -->
     <script>
